@@ -1,4 +1,9 @@
 
+2018-09-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* codegen.c (output_module_register_init): partially fix bug #548:
+	  used previous reference creation for XML registers
+
 2018-08-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* typeck.c (cb_build_cond): keep source-reference for trace/position
